Layout bug fixes

--- a/app/v3/src/components/App/App.css
+++ b/app/v3/src/components/App/App.css
@@ -95,7 +95,6 @@ h2 {
 }
 h3 {
   font-size: 24px;
-  padding-left: 16px;
 }
 h5 {
   font-size: 14px;
